--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mantine/core": "^7.13.2",
     "@mantine/hooks": "^7.13.2",
+    "@mantinex/mantine-logo": "^1.0.1",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "react": "^18",
