--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .DS_Store
 Project/.env
+Project/backend/java-server/.gradle
+backend/java-server/app/build
+backend/java-server/app/bin
+backend/java-server/app/.project
