--- a/Project/backend/java-server/.settings/org.eclipse.buildship.core.prefs
+++ b/Project/backend/java-server/.settings/org.eclipse.buildship.core.prefs
@@ -1,4 +1,4 @@
-arguments=--init-script /home/adhithirumala/.local/share/zed/extensions/work/java-eclipse-jdtls/eclipse.jdt.ls/configuration/org.eclipse.osgi/55/0/.cp/gradle/init/init.gradle
+arguments=--init-script /home/adhithirumala/eclipse.jdt.ls/configuration/org.eclipse.osgi/57/0/.cp/gradle/init/init.gradle
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
