--- a/Project/backend/java-server/app/.classpath
+++ b/Project/backend/java-server/app/.classpath
@@ -6,6 +6,27 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" output="bin/test" path="src/test/java">
+		<attributes>
+			<attribute name="gradle_scope" value="test"/>
+			<attribute name="gradle_used_by_scope" value="test"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="bin/aotTest" path="build/generated/aotTestResources">
+		<attributes>
+			<attribute name="gradle_scope" value="aotTest"/>
+			<attribute name="gradle_used_by_scope" value="test,aotTest"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="bin/aotTest" path="build/generated/aotTestSources">
+		<attributes>
+			<attribute name="gradle_scope" value="aotTest"/>
+			<attribute name="gradle_used_by_scope" value="test,aotTest"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-23/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="output" path="bin/default"/>
