--- a/Project/backend/java-server/app/.classpath
+++ b/Project/backend/java-server/app/.classpath
@@ -13,6 +13,24 @@
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" output="bin/main" path="src/main/resources">
+		<attributes>
+			<attribute name="gradle_scope" value="main"/>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="bin/aot" path="build/generated/aotResources">
+		<attributes>
+			<attribute name="gradle_scope" value="aot"/>
+			<attribute name="gradle_used_by_scope" value="main,aot"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="bin/aot" path="build/generated/aotSources">
+		<attributes>
+			<attribute name="gradle_scope" value="aot"/>
+			<attribute name="gradle_used_by_scope" value="main,aot"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" output="bin/aotTest" path="build/generated/aotTestResources">
 		<attributes>
 			<attribute name="gradle_scope" value="aotTest"/>
