--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Project/backend/java-server/.gradle
 Project/backend/java-server/app/build
 Project/backend/java-server/app/bin
 Project/backend/java-server/app/.project
+Project/backend/java-server/.settings
