--- a/Project/backend/java-server/.settings/org.eclipse.buildship.core.prefs
+++ b/Project/backend/java-server/.settings/org.eclipse.buildship.core.prefs
@@ -5,7 +5,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/usr/lib/jvm/java-21-openjdk-21.0.4.0.7-2.fc41.x86_64
+java.home=/usr/lib/jvm/jdk-23-oracle-x64
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
