--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.DS_Store
-Project/.env
+**/.env
+**/.idea
+**/.DS_Store
 Project/backend/java-server/.gradle
 Project/backend/java-server/app/build
 Project/backend/java-server/app/bin
