changed gitignore to ignore the out folder

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Project/backend/java-server/app/build
 Project/backend/java-server/app/bin
 Project/backend/java-server/app/.project
 Project/backend/java-server/.settings
+out/
