change gitignore even more

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ Project/backend/java-server/.gradle
 Project/backend/java-server/app/build
 Project/backend/java-server/app/bin
 Project/backend/java-server/app/.project
-Project/backend/java-server/.settings
-out/
+Project/backend/java-server/.settings/
+**/out/
