more gitignore stuff

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Project/backend/java-server/app/bin
 Project/backend/java-server/app/.project
 Project/backend/java-server/.settings/
 **/out/
+Project/backend/java-server/app/.classpath/
