added admin PAT to env under Commit changes step

--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -30,3 +30,5 @@ jobs:
         with:
           commit_message: Auto generated Javadocs by Actions
           branch: ${{ steps.extract_branch.outputs.branch }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.ADMIN_PAT }}
