--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -17,7 +17,9 @@
     "framer-motion": "^11.11.1",
     "next": "^14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-discord-login": "^2.1.0",
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
