--- a/Project/backend/java-server/app/src/main/resources/application.properties
+++ b/Project/backend/java-server/app/src/main/resources/application.properties
@@ -1,2 +1,11 @@
-spring.application.name=server
-spring.mvc.converters.preferred-json-mapper=gson
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Server Configuration
+server.port=8080
+# Kotlin specific
+spring.main.allow-bean-definition-overriding=true
