--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mantine/core": "^7.13.2",
+    "@mantine/dates": "^7.14.3",
     "@mantine/hooks": "^7.13.2",
     "@mantinex/mantine-logo": "^1.0.1",
     "framer-motion": "^11.13.1",
@@ -19,7 +20,8 @@
     "react": "^18",
     "react-discord-login": "^2.1.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-select": "^5.8.3"
   },
   "devDependencies": {
     "@types/node": "^20",
