profile creation almost done.

--- a/Project/backend/java-server/app/src/main/resources/application.properties
+++ b/Project/backend/java-server/app/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
 # Kotlin specific
 spring.main.allow-bean-definition-overriding=true
+spring.mvc.converters.preferred-json-mapper=gson
