profile creation works

--- a/Project/backend/java-server/app/src/main/resources/application.properties
+++ b/Project/backend/java-server/app/src/main/resources/application.properties
@@ -10,3 +10,4 @@ server.port=8080
 # Kotlin specific
 spring.main.allow-bean-definition-overriding=true
 spring.mvc.converters.preferred-json-mapper=gson
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
