--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -15,13 +15,16 @@
     "@mantine/dates": "^7.14.3",
     "@mantine/hooks": "^7.13.2",
     "@mantinex/mantine-logo": "^1.0.1",
+    "@react-spring/web": "^9.7.5",
     "framer-motion": "^11.13.1",
     "next": "^14.2.15",
     "react": "^18",
     "react-discord-login": "^2.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-select": "^5.8.3"
+    "react-select": "^5.8.3",
+    "react-swipeable": "^7.0.2",
+    "react-tinder-card": "^1.6.4"
   },
   "devDependencies": {
     "@types/node": "^20",
